# trident

./: .codecov.yml  .gitignore  .gitmodules  .hgignore  .hgtags  .mailmap  .travis.yml  CITATION  CREDITS  CloudyIonBalance.py  IonBalance.py  LICENSE  MANIFEST.in  README  README.md  SD93IonBalance.py  __init__.py  bitbucket-pipelines.yml  bp.sh  convert_SD93_tables.py  driver.py  environment.yml  pyproject.toml  readthedocs.yml  reload.py  sample_script.py  setup.cfg  setup.py  spectrum_plot.py  syn_spec_yt.py  trident.py
.circleci/: config.yml
data/: Nist_elem_list.txt
doc/: Makefile  README
examples/: gizmo_script.py  sample_script.py  tipsy_working_script.py  working_script.py
ion_balance/: CloudyIonBalance.py  SD93IonBalance.py  __init__.py  convert_SD93_tables.py  ion_balance.py
modified_ion_balance/: __init__.py  cloudy_ion_balance.py  modify_light_rays.py
sample/: sample_script.py  working_script.py
tests/: download_test_data.py  gold_standard_versions.py  test_absorption_spectrum.py  test_absorption_spectrum_fit.py  test_auto_lambda.py  test_bad_inputs.py  test_config.py  test_datasets  test_datasets.txt  test_download.py  test_examples.py  test_flake8.py  test_generate.py  test_gold.py  test_instrument.py  test_ion_balance.py  test_light_ray.py  test_line_database.py  test_lsf.py  test_pipelines.py  test_plotting.py  test_ray_generator.py  test_results_version.txt  test_spectrum_generator.py  test_utilities.py  test_velocity_space.py
trident/: __init__.py  code.py  config.py  constants.py  exceptions.py  file_utilities.py  firefly_generator.py  instrument.py  ion_balance.py  light_ray.py  line_database.py  lsf.py  plotting.py  ray_generator.py  reload.py  roman.py  spectrum_generator.py  testing.py  utilities.py
(+49 files in other folders)
